force-app/main/default/objects/Scholarhip__c/Scholarhip__c.object-meta.xml
<CustomObject>
    <label>Scholarship</label>
    <nameField>
        <label>ScholarShip</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scholarship</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>