force-app/main/default/objects/Scholarhip__c/fields/dd__c.field-meta.xml
<CustomField>
    <fullName>dd__c</fullName>
    <label>dd</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>