force-app/main/default/objects/Scholarhip__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id</label>
    <type>Text</type>
</CustomField>