force-app/main/default/objects/Scholarhip__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Shows current status of you scholarship</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submited</fullName>
            </value>
            <value>
                <fullName>Require Document</fullName>
                <label>In Process</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Amount Intialized</fullName>
            </value>
            <value>
                <fullName>Amount Sended</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>