force-app/main/default/objects/Scholarhip__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Selecet type of scholarship is applying for</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AP ePASS</fullName>
            </value>
            <value>
                <fullName>Bihar Scholarship</fullName>
            </value>
            <value>
                <fullName>ePASS Karnataka</fullName>
            </value>
            <value>
                <fullName>Goa Education Trust Scholarship</fullName>
            </value>
            <value>
                <fullName>Himachal Pradesh Scholarship – HP ePASS Scholarship Portal</fullName>
            </value>
            <value>
                <fullName>Jammu and Kashmir Scholarship – JK Scholarship also Known as PMSSS</fullName>
            </value>
            <value>
                <fullName>Kerala Scholarship – DCE Scholarship</fullName>
            </value>
            <value>
                <fullName>Madhya Pradesh Scholarship – MP Scholarship</fullName>
            </value>
            <value>
                <fullName>Maharashtra Scholarship – MahaDBT</fullName>
            </value>
            <value>
                <fullName>Odisha Scholarship</fullName>
            </value>
            <value>
                <fullName>Punjab Scholarship</fullName>
            </value>
            <value>
                <fullName>Rajasthan Scholarship</fullName>
            </value>
            <value>
                <fullName>Sanskrit Scholarship – Delhi Scholarship</fullName>
            </value>
            <value>
                <fullName>Telangana ePASS</fullName>
            </value>
            <value>
                <fullName>UP Scholarship 2023 – Uttara Pradesh Scholarship</fullName>
            </value>
            <value>
                <fullName>Uttarakhand Scholarship</fullName>
            </value>
            <value>
                <fullName>WBMDFC Scholarship</fullName>
            </value>
            <value>
                <fullName>West Bengal Scholarship – WB Scholarship for OBC, SC, and ST Students</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>